<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InviteFriendActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activityInviteFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/simpleProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:visibility="visible" />

    <EditText
        android:id="@+id/etFindFriendByEmail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="Enter Email Address"
        android:imeOptions="actionSearch"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        />

        <Button
            android:layout_marginTop="2dp"
            android:id="@+id/btnSearchForFriend"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_baseline_search_24"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvInviteFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFindFriendByEmail"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvSuggestedFriend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />

</LinearLayout>