...
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            />

        <Button
            android:id="@+id/btnInviteFriend"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:background="@drawable/ic_baseline_add_24"/>

...
