...
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password_reset">Password Reset</string>
    <string name="email_registration">Email Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="pending">Pending</string>
    <string name="title_activity_attraction_detail">Map</string>
    <string name="trip_name">Trip name</string>
    <string name="resend_email">Resend email</string>
    <string name="updating">updating...</string>
    <string name="title_activity_maps2">Map</string>

...
